# rag-pipeline

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MEMORIES.md  PLANS.md  Python3finale.ipynb  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: latest.json
docs/: ARCHITECTURE.md  CLI.md  OPERATIONS.md  ROADMAP.md  TESTING.md
docs/plans/: 2026-03-10-rag-pipeline-hardening-design.md
scripts/: audit_notebook_patterns.py  benchmark_pipeline.py  smoke_e2e.py  validate_notebook.py
src/rag_pipeline/: __init__.py  bm25_utils.py  chroma_pipeline.py  cleanup.py  cli.py  config.py  enrichment.py  evaluation.py  manifest.py  models.py  observability.py  processing.py  query_engine.py  retrieval.py  smoke.py  storage.py  text.py
tests/: test_cleanup.py  test_config_and_eval.py  test_manifest.py  test_notebook_wrappers.py  test_query_engine.py  test_retrieval.py  test_smoke.py
