[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Notebook-orchestrated, package-first retrieval-augmented generation pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "pxnz3r" }
]
keywords = [
  "rag",
  "retrieval-augmented-generation",
  "llm",
  "python",
  "notebook",
  "vector-search",
  "chroma",
  "bm25",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=2.2.6",
  "pypdf>=5.0.1",
  "rank-bm25>=0.2.2",
  "requests>=2.31",
]

[project.scripts]
rag-pipeline = "rag_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/pxnz3r/rag-pipeline"
Repository = "https://github.com/pxnz3r/rag-pipeline"
Issues = "https://github.com/pxnz3r/rag-pipeline/issues"
Documentation = "https://github.com/pxnz3r/rag-pipeline/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
